<resources>
    <string name="app_name">KiteSurfingApp</string>
    <string name="destinations">Kitesurfing Destinations</string>
    <string name="wind_probability">Wind Probability</string>
    <string name="apply">APPLY</string>
    <string name="filter_country">.</string>
    <string name="filter_wind_probability">,</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="when_to_go">When to Go</string>
    <string name="show_on_map">SHOW ON MAP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="def_web_client_id" translatable="false">
        636144821084-iqu9gauj4ap0te4aslf6c9djf0edm9us.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="filter">Filter</string>
    <string name="log_out">Log Out</string>
    <string name="take_a_picture">Camera</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="save_to_gallery">SAVE TO GALLERY</string>
</resources>
