<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/colorTransparentBlue"
        card_view:cardCornerRadius="8dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind_probability"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when_to_go"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/details_when_to_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/details_geolocation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_on_map"
                android:layout_gravity="center"
                android:onClick="displayGeolocation"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>